--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-Django==2.2
+Django==2.2.28
 djangorestframework==3.13.1
 esdk-obs-python==3.20.11
-requests==2.24.0
+requests==2.31.0
+uwsgi==2.0.22
